--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
-<h1>{{ title }}</h1>
+<!--<nav>-->
+<!--  <ul>-->
+<!--    <li><a routerLink="/auth" routerLinkActive="active">First Component</a></li>-->
+<!--  </ul>-->
+<!--</nav>-->
 
-<nav>
-  <ul>
-    <li><a routerLink="/auth" routerLinkActive="active">First Component</a></li>
-  </ul>
-</nav>
+<div class="container">
+  <h1>{{ title }}</h1>
+  <app-auth></app-auth>
+</div>
 
 <router-outlet></router-outlet>
