--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -2,6 +2,6 @@
 <form (ngSubmit)="onSubmit()">
   <div class="form-group">
     <label for="email">E-mail</label>
-    <input type="text" class="form-control" id="email" name="email" required [(ngModel)]="model.email">
+    <input type="text" class="form-control" id="email" name="email" required>
   </div>
 </form>
