--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 
 <div class="container">
   <h1>{{ title }}</h1>
-  <app-auth></app-auth>
+<!--  <app-auth></app-auth>-->
 </div>
 
 <router-outlet></router-outlet>
