main template and sign in form

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,3 +20,11 @@ body, input[type="text"], button {
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+section {
+  padding: 10px 10px 50px;
+}
+
+section.content-bottom {
+  padding-top: 100px;
+}
