--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -1,7 +1,29 @@
-<h1>Login Form</h1>
-<form (ngSubmit)="onSubmit()">
-  <div class="form-group">
-    <label for="email">E-mail</label>
-    <input type="text" class="form-control" id="email" name="email" required>
-  </div>
-</form>
+<!--<h1>Login Form</h1>-->
+<!--<form (ngSubmit)="onSubmit()">-->
+<!--  <div class="form-group">-->
+<!--    <label for="email">E-mail</label>-->
+<!--    <input type="text" class="form-control" id="email" name="email" required>-->
+<!--  </div>-->
+<!--</form>-->
+
+<main class="form-signin">
+  <form (ngSubmit)="onSubmit()">
+    <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+
+    <div class="form-floating">
+      <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" required>
+      <label for="floatingInput">Email address</label>
+    </div>
+    <div class="form-floating">
+      <input type="password" class="form-control" id="floatingPassword" placeholder="Password" required>
+      <label for="floatingPassword">Password</label>
+    </div>
+
+    <div class="checkbox mb-3">
+      <label>
+        <input type="checkbox" value="remember-me"> Remember me
+      </label>
+    </div>
+    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+  </form>
+</main>
