--- a/src/styles.scss
+++ b/src/styles.scss
@@ -128,3 +128,11 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+input.invalid {
+  border-color: #ff0000;
+}
+
+input {
+  margin-bottom: 3px !important;
+}
